# do-client

./: .clang-format  .gitattributes  .gitignore  CMakeLists.txt  CMakeSettings.json  CPPLINT.cfg  NOTICE.md  README.md
.config/: CredScanSupressions.json
.gdn/: .gdnsuppress
.github/: CODEOWNERS
azure-pipelines/publishing/: github-release.yml
azure-pipelines/publishing/templates/: release-docker-build-steps.yml  release-native-build-steps.yml
client-lite/: CMakeLists.txt
client-lite/src/config/: config_defaults.h  config_manager.cpp  config_manager.h  mcc_manager.cpp  mcc_manager.h  network_monitor.cpp  network_monitor.h
client-lite/src/download/: download.cpp  download.h  download_manager.cpp  download_manager.h  download_progress_tracker.h  download_status.h
client-lite/src/exe/: docs.cpp
client-lite/src/include/: basic_types.h  do_assert.h  do_common.h  do_error.h  do_filesystem.h  hresult_helpers.h  sal_undef.h
client-lite/src/ipc/: rest_api_params.cpp  rest_api_params.h  rest_api_parser.cpp  rest_api_parser.h  rest_api_request.cpp  rest_api_request.h  rest_http_controller.cpp  rest_http_controller.h  rest_http_listener.cpp  rest_http_listener.h  rest_http_listener_conn.cpp  rest_http_listener_conn.h  rest_port_advertiser.h
client-lite/src/threading/: do_event.cpp  do_event.h  task_queue.cpp  task_queue.h  task_thread.cpp  task_thread.h  waitable_counter.h
client-lite/src/trace/: do_log.cpp  do_log.h  event_data.cpp  event_data.h  telemetry_logger.cpp  telemetry_logger.h  trace_sink.cpp  trace_sink.h  trace_src.cpp  trace_src.h
client-lite/src/util/: ban_list.cpp  ban_list.h  do_curl_multi_operation.cpp  do_curl_multi_operation.h  do_curl_wrappers.cpp  do_curl_wrappers.h  do_date_time.h  do_file.cpp  do_file.h  do_guid.cpp  do_guid.h  do_json_parser.cpp  do_json_parser.h  do_noncopyable.h  do_persistence.cpp  do_persistence.h  error_macros.cpp  error_macros.h  http_agent.cpp  http_agent.h  http_agent_interface.h  proc_launch_helper.h  proxy_finder.cpp  proxy_finder.h  safe_int.h  stop_watch.cpp  stop_watch.h  string_ops.cpp  string_ops.h
client-lite/test/: CMakeLists.txt  CPPLINT.cfg  do_log_tests.cpp  docs_tests.cpp  download_manager_tests.cpp  json_parser_tests.cpp  mcc_manager.tests.cpp  network_monitor_tests.cpp  rest_http_listener_tests.cpp  string_ops_tests.cpp  test_common.h  test_data.cpp  test_data.h  test_helpers.cpp  test_helpers.h  test_verifiers.h
common/: CMakeLists.txt
common/cmake/: FindUUID.cmake  Findlibproxy.cmake  do-build-helpers.cmake  do-filesystem.cmake  do-packaging-helpers.cmake
common/lib-dohttp/: CMakeLists.txt  do_cpprest_base_uri.h  do_cpprest_uri.cpp  do_cpprest_uri.h  do_cpprest_uri_builder.cpp  do_cpprest_uri_builder.h  do_cpprest_utils.cpp  do_cpprest_utils.h  do_http_defines.cpp  do_http_defines.h  do_http_packet.h  do_http_parser.cpp  do_http_parser.h
common/lib-dotestutil/: CMakeLists.txt  do_test_helpers.cpp  do_test_helpers.h
common/lib-doversion/: CMakeLists.txt  do_version.cpp  do_version.h
docs/: getting-started-on-linux.md
docs/agent-reference/linux/: how-to-build-and-test.md
docs/plugin-reference/linux/: how-to-build-and-test.md
docs/sdk-reference/linux/: how-to-build-and-test.md
guardian/SDL/: .gdnsuppress
licenses/: cgmanifest.json
plugins/: CMakeLists.txt
plugins/linux-apt/: CMakeLists.txt  do_date_time.h  do_hash.cpp  do_hash.h  do_log.cpp  do_log.h  do_plugin_exception.h  do_string_util.cpp  do_string_util.h  main.cpp
plugins/linux-apt/scripts/: configure-apt-method.sh  postinst.in.sh  postrm.in.sh  prerm.in.sh
sdk-cpp/: CMakeLists.txt
sdk-cpp/include/: do_config.h  do_download.h  do_download_property.h  do_download_status.h  do_error_macros.h  do_errors.h  do_exceptions.h
sdk-cpp/src/: do_config.cpp  do_download.cpp  do_download_property.cpp  do_download_status.cpp  do_errors.cpp  do_exceptions.cpp
sdk-cpp/src/internal/: do_config_internal.h  do_download_property_internal.h  do_error_helpers.cpp  do_error_helpers.h  do_exceptions_internal.cpp  do_exceptions_internal.h  do_filesystem.h  do_http_parser.cpp  do_http_parser.h  do_noncopyable.h  do_url_encode.h  do_variant_native_type.h  download_impl.h  download_interface.h
sdk-cpp/src/internal/com/: do_config_internal.cpp  do_download_property_internal.cpp  download_impl.cpp
sdk-cpp/src/internal/com/deliveryoptimization/: do.hpp
sdk-cpp/src/internal/rest/: do_config_internal.cpp  do_download_property_internal.cpp  download_impl.cpp  download_rest.cpp  download_rest.h
sdk-cpp/src/internal/rest/util/: do_http_client.cpp  do_http_client.h  do_http_message.cpp  do_http_message.h  do_persistence.cpp  do_persistence.h  do_port_finder.cpp  do_port_finder.h
sdk-cpp/src/internal/util/: do_exceptions_internal.cpp  do_exceptions_internal.h  do_http_client.cpp  do_http_client.h  do_http_message.cpp  do_http_message.h  do_http_parser.cpp  do_http_parser.h  do_noncopyable.h  do_persistence.cpp  do_persistence.h  do_port_finder.cpp  do_port_finder.h  do_url_encode.h
sdk-cpp/tests/: CMakeLists.txt  config_tests.cpp  dosdkcpp_testrunner.cpp  download_properties_tests.cpp  download_status_tests.cpp  download_tests.cpp  download_tests_common.cpp  mcc_download_tests.cpp  port_discovery_tests.cpp  rest_interface_tests.cpp  test_data.cpp  test_data.h  test_helpers.cpp  test_helpers.h  tests_common.h
sdk-cpp/tests/com/: download_properties_tests.cpp  download_tests.cpp  test_helpers.cpp
sdk-cpp/tests/rest/: config_tests.cpp  mcc_download_tests.cpp  network_connectivity_tests.cpp  port_discovery_tests.cpp  rest_interface_tests.cpp  test_helpers.cpp
sdk-cpp/tests_nothrow/: CMakeLists.txt  dosdkcpp_testrunner.cpp  download_properties_tests.cpp  download_tests.cpp  test_data.cpp  test_data.h  test_helpers.cpp  test_helpers.h
snap/: snapcraft.yaml
snapcraft-options/: connect-snaps.sh  snapcraft-agent.yaml  snapcraft-sdk.yaml  ubuntu-snap.md
